# hjlib-skeleton

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
docs/design/: README.md  migration.md  test.md
docs/usage/: README.md  joint_name_semantics.md
src/hjlib_skeleton/: __init__.py  index_transform.py  joint_name_maps.py  skeleton_topology.py
test_smoke/: clean_test_data.py  test_all_func.py  test_index_transform.py  test_joint_name_maps.py  test_skeleton_topology.py
