[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'hjlib-skeleton'
version = '0.1.0'
description = 'Joint-name vocabularies (SMPL / COCO / H36M / MPI / JTA / OpenPose / VitPose) and cross-format index transforms.'
requires-python = '>=3.11'
dependencies = [
    'numpy',
]

[tool.hatch.build.targets.wheel]
packages = ['src/hjlib_skeleton']

[tool.pytest.ini_options]
testpaths = ['test_smoke', 'test']

[tool.hjlibm.deps]
# Empty: leaf lib. Pure vocabulary + index helpers, no internal hjlib deps.
